fixed the cards gap issue

--- a/css/cards.css
+++ b/css/cards.css
@@ -5,7 +5,6 @@
     float: left;
     margin: 10px;
     border:2px solid black;
-    width: 40%;
 }
 
 .card:hover {
